move docs outsite workspaces

--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "prepare": "husky",
     "purge:node_modules": "rimraf node_modules packages/*/node_modules",
     "release": "turbo run build && turbo run lint test && changeset publish",
-    "docs:start": "pnpm --filter docs run start",
-    "docs:build": "pnpm --filter docs run build",
-    "docs:deploy": "pnpm --filter docs run deploy"
+    "docs:start": "cd docs && pnpm start",
+    "docs:build": "cd docs && pnpm run build"
   },
   "author": "",
   "license": "ISC",
