create rate limit doc

--- a/gateweaver.yml
+++ b/gateweaver.yml
@@ -8,7 +8,9 @@ policyDefinitions:
       - "test-header"
       - "another-header"
   rateLimit:
-    rateLimitBy: "jwt"
+    rateLimitBy: "ip"
+    standardHeaders: "draft-7"
+    skipSuccessfulRequests: true
   jwt:
     secretOrPublicKey: "${JWT_SECRET}"
     algorithms:
@@ -23,6 +25,7 @@ endpoints:
         test-header: "test"
     policies:
       - cors
+      - rateLimit
   - path: "/giphy/trending"
     target:
       url: "https://api.giphy.com/v1/gifs/trending"
@@ -32,6 +35,7 @@ endpoints:
         limit: "1"
     policies:
       - cors
+      - rateLimit
   - path: "/spotify/artist"
     target:
       url: "https://api.spotify.com/v1/artists/4Z8W4fKeB5YxbusRsdQVPb"
