--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -14,7 +14,7 @@
     "test:watch": "jest --watch"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "ajv": "^8.12.0",
     "cors": "^2.8.5",
