move docs to packages

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "lint": "turbo lint",
     "clean": "turbo clean",
     "purge:node_modules": "rimraf node_modules packages/*/node_modules",
-    "release": "turbo run build && turbo run lint test && changeset publish",
-    "docs:start": "cd docs && pnpm start",
-    "docs:build": "cd docs && pnpm run build",
-    "docs:serve": "cd docs && pnpm run serve",
+    "purge:turbo": "rimraf .turbo packages/*/.turbo",
+    "release": "turbo run build --filter=@gateweaver/* && turbo run lint test --filter=@gateweaver/* && changeset publish",
+    "docs:start": "pnpm --filter docs run start",
+    "docs:build": "pnpm --filter docs run build",
+    "docs:serve": "pnpm --filter docs run serve",
     "prepare": "husky"
   },
   "author": "",
