--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -12,7 +12,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "clean": "rm -rf build .docusaurus"
   },
   "dependencies": {
     "@docusaurus/core": "3.1.1",
