setup e2e test environment

--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "build": "turbo build",
     "build:watch": "turbo build:watch",
     "test": "turbo test",
-    "test:watch": "turbo run test:watch",
+    "test:watch": "turbo test:watch",
+    "test:e2e": "turbo test --filter=e2e",
     "lint": "turbo lint",
     "clean": "turbo clean",
     "purge:node_modules": "rimraf node_modules packages/*/node_modules",
     "purge:turbo": "rimraf .turbo packages/*/.turbo",
-    "docs:start": "pnpm --filter docs run start",
-    "docs:build": "pnpm --filter docs run build",
-    "docs:serve": "pnpm --filter docs run serve",
-    "server:start": "pnpm --filter @gateweaver/server run start",
+    "docs:start": "turbo start --filter=docs",
+    "docs:build": "turbo build --filter=docs",
+    "docs:serve": "turbo serve --filter=docs",
     "prepare": "husky",
     "release": "turbo run build --filter=@gateweaver/* && turbo run lint test --filter=@gateweaver/* && changeset publish"
   },
