--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -11,7 +11,9 @@
   "license": "MIT",
   "devDependencies": {
     "@gateweaver/server": "*",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/supertest": "^6.0.2",
+    "jsonwebtoken": "^9.0.2",
     "msw": "^2.2.13",
     "supertest": "^6.3.4"
   }
