--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:watch": "turbo build:watch",
     "test": "turbo test",
     "test:watch": "turbo test:watch",
-    "test:e2e": "turbo test --filter=e2e",
+    "test:e2e": "turbo test --filter=e2e --force --no-cache",
     "lint": "turbo lint",
     "clean": "turbo clean",
     "purge:node_modules": "rimraf node_modules packages/*/node_modules",
