--- a/.env.gateweaver.sample
+++ b/.env.gateweaver.sample
@@ -1,4 +1,4 @@
 # Sample .env.gateweaver file for local development
 NODE_ENV=development
-AUTH_TOKEN=example-token
+API_KEY=example-api-key
 CLIENT_URL=http://localhost:5173
