--- a/examples/react-app/gateway/gateweaver.yml
+++ b/examples/react-app/gateway/gateweaver.yml
@@ -8,6 +8,6 @@ endpoints:
       url: "https://httpbin.org/bearer"
     request:
       headers:
-        Authorization: "Bearer ${AUTH_TOKEN}"
+        Authorization: "Bearer ${API_KEY}"
     policies:
       - cors
