--- a/gateweaver.yml
+++ b/gateweaver.yml
@@ -9,6 +9,6 @@ endpoints:
       url: "https://httpbin.org/bearer"
     request:
       headers:
-        Authorization: "Bearer ${AUTH_TOKEN}"
+        Authorization: "Bearer ${API_KEY}"
     policies:
       - cors
