--- a/packages/e2e/tests/jwt/gateweaver.yml
+++ b/packages/e2e/tests/jwt/gateweaver.yml
@@ -19,7 +19,7 @@ endpoints:
       headers:
         Authorization: "Bearer mock-server-token"
       query:
-        message: "Message from gateway query"
+        message: "Message from gateweaver query"
     response:
       headers:
         remove-header: ""
@@ -35,7 +35,7 @@ endpoints:
       headers:
         Authorization: "Bearer mock-server-token"
       query:
-        message: "Message from gateway query"
+        message: "Message from gateweaver query"
     policies:
       - rateLimit
       - jwt
