--- a/packages/e2e/tests/public/gateweaver.yml
+++ b/packages/e2e/tests/public/gateweaver.yml
@@ -13,7 +13,7 @@ endpoints:
       headers:
         Authorization: "Bearer mock-server-token"
       query:
-        message: "Message from gateway query"
+        message: "Message from gateweaver query"
     response:
       headers:
         remove-header: ""
@@ -28,6 +28,6 @@ endpoints:
       headers:
         Authorization: "Bearer mock-server-token"
       query:
-        message: "Message from gateway query"
+        message: "Message from gateweaver query"
     policies:
       - rateLimit
