add custom middleware setup

--- a/dev/.env.gateweaver.sample
+++ b/dev/.env.gateweaver.sample
@@ -1,4 +1,4 @@
 # Sample .env.gateweaver file for local development
 NODE_ENV=development
 API_KEY=example-api-key
-CLIENT_URL=http://localhost:5173
+TEST_NAME=Gatweaver
