--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,6 +28,8 @@
     "http-proxy-middleware": "^2.0.6",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.5",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
