--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "dev": "turbo build:watch & nodemon packages/server/src/main.ts",
+    "dev": "turbo build:watch & cd dev && nodemon --config ../nodemon.json ../packages/server/src/main.ts",
     "build": "turbo build",
     "build:watch": "turbo build:watch",
     "test": "turbo test",
@@ -23,6 +23,7 @@
   "license": "MIT",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
