update policies logs

--- a/dev/gateweaver.yml
+++ b/dev/gateweaver.yml
@@ -23,3 +23,5 @@ endpoints:
       handler:
         path: "./handlers/test-handler.ts"
         function: "testHandler"
+    policies:
+      - rateLimit
