Policy definitions optional (#73)
* Allow policies to be used with defaults without being defined in config

* update parseConfig tests

* update policies logs

* update parseConfig

--- a/dev/gateweaver.yml
+++ b/dev/gateweaver.yml
@@ -1,8 +1,3 @@
-policyDefinitions:
-  cors:
-    origin: "*"
-    methods: ["GET", "POST"]
-
 global:
   policies:
     - cors
@@ -28,3 +23,5 @@ endpoints:
       handler:
         path: "./handlers/test-handler.ts"
         function: "testHandler"
+    policies:
+      - rateLimit
