add customer handler e2e test

--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "jest --runInBand"
+    "test": "NODE_OPTIONS=\"$NODE_OPTIONS --experimental-vm-modules\" jest --runInBand"
   },
   "keywords": [],
   "author": "",
