--- a/dev/gateweaver.yml
+++ b/dev/gateweaver.yml
@@ -3,13 +3,13 @@ global:
     - cors
 
 endpoints:
-  - path: "/example"
+  - path: "/proxy"
     target:
       url: "https://httpbin.org/bearer"
     request:
       headers:
         Authorization: "Bearer ${API_KEY}"
-  - path: "/test"
+  - path: "/middleware"
     target:
       url: "https://httpbin.org/bearer"
     request:
