--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
   "license": "MIT",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.17",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -40,6 +39,9 @@
     "tsup": "^8.0.2",
     "turbo": "^1.12.4",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.21"
   },
   "workspaces": [
     "packages/*"
