--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "@gateweaver/policies": "workspace:*",
+    "@types/express": "^4.17.21",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "chokidar": "^3.6.0",
@@ -31,8 +32,5 @@
     "tsup": "^8.0.2",
     "typescript": "^5.4.5",
     "yaml": "^2.3.4"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21"
   }
 }
