--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -23,6 +23,7 @@
     "jwks-rsa": "^3.1.0"
   },
   "devDependencies": {
+    "@gateweaver/tsconfig": "workspace:*",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21"
   }
