--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "@gateweaver/policies": "workspace:*",
+    "@gateweaver/tsconfig": "workspace:*",
     "@types/express": "^4.17.21",
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
