--- a/packages/policies/tsconfig.json
+++ b/packages/policies/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "@gateweaver/tsconfig/base.json",
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "."
