--- a/dev/gateweaver.yml
+++ b/dev/gateweaver.yml
@@ -18,7 +18,7 @@ endpoints:
     middleware:
       - path: "./middleware/custom-middleware.ts"
         function: "customMiddleware"
-  - path: "/handler"
+  - path: "/handler/:postId"
     target:
       handler:
         path: "./handlers/custom-handler.ts"
