--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -28,6 +28,7 @@
     "express-jwt": "^8.4.1",
     "helmet": "^7.1.0",
     "http-proxy-middleware": "^2.0.6",
+    "openapi-typescript": "^7.1.0",
     "pino": "^8.19.0",
     "pino-pretty": "^10.3.1",
     "tsup": "^8.0.2",
