--- a/packages/policies/package.json
+++ b/packages/policies/package.json
@@ -13,7 +13,10 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gateweaver/gateweaver.git"
+  },
   "license": "MIT",
   "dependencies": {
     "ajv": "^8.12.0",
