--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "prepare": "husky",
     "release": "turbo run build --filter=@gateweaver/* && turbo run lint test --filter=@gateweaver/* && changeset publish"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gateweaver/gateweaver.git"
+  },
   "license": "MIT",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
