--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,7 +14,10 @@
     "test": "jest",
     "test:watch": "jest --watch"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gateweaver/gateweaver.git"
+  },
   "license": "MIT",
   "dependencies": {
     "@gateweaver/policies": "workspace:*",
