--- a/package.json
+++ b/package.json
@@ -25,26 +25,27 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@changesets/cli": "^2.27.1",
+    "@changesets/cli": "^2.28.1",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.17",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.27",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
-    "husky": "^9.0.11",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.0",
+    "nodemon": "^3.1.9",
     "prettier": "3.2.5",
-    "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.2",
+    "rimraf": "^5.0.10",
+    "ts-jest": "^29.3.0",
     "ts-node": "^10.9.2",
-    "tsup": "^8.0.2",
-    "turbo": "^1.12.4",
-    "typescript": "^5.3.3"
+    "tsup": "^8.4.0",
+    "turbo": "^2.4.4",
+    "typescript": "^5.8.2"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "packageManager": "pnpm@9.14.2"
 }
